# kokkai-webtv-captions

./: .gitignore  LICENSE  README.md  pyproject.toml
kokkai/: __init__.py  __main__.py  _http.py  errors.py  fetch.py
kokkai/list/: __init__.py  __main__.py  render.py  sangiin_list.py  sangiin_sid.py  shugiin_list.py  status.py
kokkai/sangiin/: __init__.py  __main__.py  detect.py  extract.py  render.py
kokkai/search/: __init__.py  __main__.py  cache.py  index.py  query.py  render.py  tokenize.py
kokkai/shugiin/: __init__.py  __main__.py  _models.py  answerer.py  asr.py  audio.py  extract.py  glossary.py  hints.py  llm_context.py  llm_correct.py  members.py  render.py
scripts/: asr_poc_diarize.py  asr_poc_diarize_render.py  fetch_fixtures.py  make_screenshot.py
tests/: run_smoke.py  test_detect.py  test_errors.py  test_extract.py  test_list_and_fetch.py  test_search.py  test_shugiin_answerer.py  test_shugiin_asr.py  test_shugiin_extract.py  test_shugiin_glossary.py  test_shugiin_hints.py  test_shugiin_llm_context.py  test_shugiin_llm_correct.py  test_shugiin_members.py  test_shugiin_models.py  test_shugiin_skip_asr.py
